maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:100: error: type mismatch;
 found   : Unit
 required: Boolean
  if (min=n) {
         ^JediEscaper:103: error: type mismatch;
 found   : Unit
 required: Boolean
  if (min=s) {
         ^JediEscaper:106: error: type mismatch;
 found   : Unit
 required: Boolean
  if (min=o) {
         ^JediEscaper:109: error: type mismatch;
 found   : Unit
 required: Boolean
  if (min=e) {
         ^JediEscaper:109: error: type mismatch;
 found   : Unit
 required: plm.universe.Direction
  if (min=e) {
  ^